re-enable full build

--- a/cryptomatte/CMakeLists.txt
+++ b/cryptomatte/CMakeLists.txt
@@ -1,27 +1,27 @@
 set(SRC cryptomatte.cpp cryptomatte_loader.cpp cryptomatte_shader.cpp cryptomatte_manifest_driver.cpp cryptomatte_filter.cpp MurmurHash3.cpp )
 set(SHADER cryptomatte)
 set(UI ${CMAKE_CURRENT_SOURCE_DIR}/${SHADER}.ui)
-#set(MTD ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.mtd)
-#set(AE ${CMAKE_CURRENT_BINARY_DIR}/cryptomatteTemplate.py)
-#set(AEXML ${CMAKE_CURRENT_BINARY_DIR}/AEcryptomatteTemplate.xml)
-#set(NEXML ${CMAKE_CURRENT_BINARY_DIR}/NEcryptomatteTemplate.xml)
-#set(SPDL ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.spdl)
-#set(KARGS ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.args)
-#set(C4DRES ${CMAKE_CURRENT_BINARY_DIR}/C4DtoA)
+set(MTD ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.mtd)
+set(AE ${CMAKE_CURRENT_BINARY_DIR}/cryptomatteTemplate.py)
+set(AEXML ${CMAKE_CURRENT_BINARY_DIR}/AEcryptomatteTemplate.xml)
+set(NEXML ${CMAKE_CURRENT_BINARY_DIR}/NEcryptomatteTemplate.xml)
+set(SPDL ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.spdl)
+set(KARGS ${CMAKE_CURRENT_BINARY_DIR}/${SHADER}.args)
+set(C4DRES ${CMAKE_CURRENT_BINARY_DIR}/C4DtoA)
 
 add_library(${SHADER} SHARED ${SRC})
 
 target_link_libraries(${SHADER} ai)
 set_target_properties(${SHADER} PROPERTIES PREFIX "")
 
-#add_custom_command(OUTPUT ${MTD} COMMAND python ARGS ${CMAKE_SOURCE_DIR}/uigen.py ${UI} ${MTD} ${AE} ${AEXML} ${NEXML} ${SPDL} ${KARGS} ${CMAKE_CURRENT_BINARY_DIR} ${HTML} DEPENDS ${UI})
-#add_custom_target(${SHADER}UI ALL DEPENDS ${MTD})
+add_custom_command(OUTPUT ${MTD} COMMAND python ARGS ${CMAKE_SOURCE_DIR}/uigen.py ${UI} ${MTD} ${AE} ${AEXML} ${NEXML} ${SPDL} ${KARGS} ${CMAKE_CURRENT_BINARY_DIR} ${HTML} DEPENDS ${UI})
+add_custom_target(${SHADER}UI ALL DEPENDS ${MTD})
 
 install(TARGETS ${SHADER} DESTINATION ${DSO_INSTALL_DIR})
-#install(FILES ${MTD} DESTINATION ${MTD_INSTALL_DIR})
-#install(FILES ${AE} DESTINATION ${AE_INSTALL_DIR})
-#install(FILES ${AEXML} DESTINATION ${AEXML_INSTALL_DIR})
-#install(FILES ${NEXML} DESTINATION ${NEXML_INSTALL_DIR})
-#install(FILES ${SPDL} DESTINATION ${SPDL_INSTALL_DIR})
-#install(FILES ${KARGS} DESTINATION ${ARGS_INSTALL_DIR})
-#install(DIRECTORY ${C4DRES} DESTINATION ${INSTALL_DIR})
+install(FILES ${MTD} DESTINATION ${MTD_INSTALL_DIR})
+install(FILES ${AE} DESTINATION ${AE_INSTALL_DIR})
+install(FILES ${AEXML} DESTINATION ${AEXML_INSTALL_DIR})
+install(FILES ${NEXML} DESTINATION ${NEXML_INSTALL_DIR})
+install(FILES ${SPDL} DESTINATION ${SPDL_INSTALL_DIR})
+install(FILES ${KARGS} DESTINATION ${ARGS_INSTALL_DIR})
+install(DIRECTORY ${C4DRES} DESTINATION ${INSTALL_DIR})
